# agentforge

./: .env.example  .gitignore  PRD.md  README.md  ROADMAP_AND_PROGRESS.md  pyproject.toml
agentforge/: __init__.py  agent.py  cli.py  config.py  context.py  cost.py  guards.py  messages.py  orchestrator.py  permissions.py  trace.py
agentforge/llm/: __init__.py  _openai_compat.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
agentforge/sandbox/: __init__.py  base.py  docker.py  e2b.py  subprocess.py
agentforge/tools/: __init__.py  code.py  files.py  registry.py  web.py
agentforge/web/: __init__.py  server.py
agentforge/web/static/: index.html
docs/: V2_DAG_PARALLELISM.md
examples/: code-review-pipeline.yaml  competitor-analysis.yaml  fanout-research.yaml  research-dag.yaml  research-pipeline.ollama.yaml  research-pipeline.yaml  sample-trace.json
tests/: _helpers.py  conftest.py  test_agent.py  test_config.py  test_context.py  test_cost.py  test_custom_tool.py  test_dag.py  test_fanout.py  test_orchestrator.py  test_parallel.py  test_permissions.py  test_sandbox.py  test_tools_files.py  test_tools_web.py  test_trace.py
