[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "Build multi-agent AI pipelines from a YAML file — bring your own model, your own provider, your own tools. ReAct loops, tiered sandbox, human-in-the-loop permissions, hard cost caps, full tracing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hamza El Sousi" }]
requires-python = ">=3.11"
keywords = ["agents", "multi-agent", "llm", "react", "openrouter", "orchestration", "agentic", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "tiktoken>=0.7",
    "tenacity>=8.3",
    "duckduckgo-search>=6.0",
    "trafilatura>=1.10",
    "rich>=13.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
docker = ["docker>=7.1"]
e2b = ["e2b-code-interpreter>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/HamzaElSousi/agentforge"
Issues = "https://github.com/HamzaElSousi/agentforge/issues"

[project.scripts]
agentforge = "agentforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
